--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ APP_ENV=local
 APP_KEY=base64:kNCYl8OzSTMgE6UQsAP3wl07CzbECERZ3AXayoxeIls=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http:https://foodandrink.herokuapp.com
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql12.freemysqlhosting.net
 DB_PORT=3306
-DB_DATABASE=ffd_02
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sql12182794
+DB_USERNAME=sql12182794
+DB_PASSWORD=geIb7jPHp7
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
